# fuzzpaint

./: .gitignore  Cargo.toml  Cross.toml  assumptions.md  capture_debug.cap  fileschema.md  nohup.out  readme.md  resource-fileschema.md
config/: hotkeys.ron
fuzzpaint/: Cargo.toml  capture_debug.cap  log.out  readme.md
fuzzpaint-core/: Cargo.toml  readme.md
fuzzpaint-core/src/: blend.rs  brush.rs  color.rs  lib.rs  units.rs  util.rs
fuzzpaint-core/src/commands/: mod.rs
fuzzpaint-core/src/commands/queue/: mod.rs  provider.rs
fuzzpaint-core/src/io/: id.rs  mod.rs  resource.rs
fuzzpaint-core/src/io/riff/: decode.rs  encode.rs
fuzzpaint-core/src/queue/: inner_state.rs  mod.rs  provider.rs  queue_state.rs  reader.rs  state_reader.rs  writer.rs
fuzzpaint-core/src/repositories/: fonts.rs  mod.rs
fuzzpaint-core/src/repositories/brushes/: mod.rs
fuzzpaint-core/src/repositories/points/: archetype.rs  io.rs  mod.rs  slab.rs
fuzzpaint-core/src/state/: document.rs  mod.rs  palette.rs  rich_text.rs
fuzzpaint-core/src/state/graph/: commands.rs  mod.rs  stable_id.rs  writer.rs
fuzzpaint-core/src/state/stroke_collection/: commands.rs  mod.rs  writer.rs
fuzzpaint-core/src/state/transform/: mod.rs
fuzzpaint-core/src/stroke/: archetype.rs  mod.rs
fuzzpaint-core/test-data/: empty.fzp  test image.qoi
fuzzpaint/src/: blend.rs  brush.rs  document_viewport_proxy.rs  egui_impl.rs  gizmos.rs  main.rs  picker.rs  render_device.rs  renderer.rs  repositories.rs  stylus_events.rs  text.rs  ui.rs  util.rs  view_transform.rs  vulkano_prelude.rs  window.rs
fuzzpaint/src/actions/: mod.rs  winit_action_collector.rs
fuzzpaint/src/actions/hotkeys/: defaults.rs  enum_smuggler.rs  mod.rs
fuzzpaint/src/commands/queue/: provider.rs  writer.rs
fuzzpaint/src/gizmos/: renderer.rs  transform.rs
fuzzpaint/src/global/: hotkeys.rs  mod.rs  provider.rs
fuzzpaint/src/pen_tools/: brush.rs  dummy.rs  gizmo.rs  lasso.rs  mod.rs  picker.rs  viewport.rs
fuzzpaint/src/renderer/: blender.rs  gpu_tess.rs  mod.rs  picker.rs  requests.rs  stroke_batcher.rs
fuzzpaint/src/renderer/picker/: stage.rs
fuzzpaint/src/repositories/: fonts.rs
fuzzpaint/src/repositories/points/: io.rs
fuzzpaint/src/shaders/: blend_clip.frag  blend_no_clip.frag  dither.comp  stamp.frag  stamp.frag.spv  tessellate_stamp.comp  widelines.geom
fuzzpaint/src/shaders/blend/: VALIDATE_OUT.sprv  blend_one.comp  modes.glsl  validate.sh
fuzzpaint/src/state/graph/: commands.rs  writer.rs
fuzzpaint/src/tess/: mod.rs
fuzzpaint/src/text/: cache.rs  renderer.rs  tessellator.rs
fuzzpaint/src/ui/: brush_ui.rs  color_palette.rs  drag.rs  mod.rs  modal.rs  requests.rs  settigns.rs  settings.rs
fuzzpaint/src/voronoi/: voronoi.rs
fuzzpaint/test-data/: dict.fzp
shell/: fuzzpaint.desktop  x-fuzzpaint-doc-mime.xml
src/: DocumentViewportProxy.rs  actions.rs  blend.rs  borrowed_state.rs  brush.rs  commands.rs  document_viewport_proxy.rs  egui_impl.rs  gizmos.rs  gpu_err.rs  gpu_tess.rs  graph.rs  id.rs  io.rs  main.rs  pen_tools.rs  picker.rs  render_device.rs  renderer.rs  repositories.rs  state.rs  stylus_events.rs  tess.rs  text.rs  ui.rs  view_transform.rs  vulkano_prelude.rs  window.rs
src/actions/: hotkeys.rs  winit_action_collector.rs
src/actions/hotkeys/: defaults.rs
src/commands/: queue.rs
src/commands/queue/: provider.rs  queue_state.rs  state.rs  state_reader.rs  writer.rs
src/gizmos/: renderer.rs  transform.rs
src/gpu_err/: builder.rs  gpu_err.rs  gpu_err_vulkano_impls.rs
src/io/: common.rs  id.rs  riff.rs
src/io/riff/: decode.rs  encode.rs
src/pen_tools/: brush.rs  dummy.rs  gizmo.rs  lasso.rs  picker.rs  viewport.rs
src/renderer/: gpu_tess.rs  picker.rs  stroke_batcher.rs  text.rs
src/renderer/picker/: stage.rs
src/renderer/text/: cache.rs  tessellator.rs
src/repositories/: points.rs
src/repositories/points/: archetype.rs  io.rs  slab.rs
src/shaders/: stamp.frag  stamp.frag.spv  stamp.vert  tessellate_stamp.comp
src/shaders/blend/: blend_one.comp  modes.glsl  validate.comp  validate.sh
src/state/: borrowed.rs  graph.rs  rich_text.rs  stroke_collection.rs
src/state/graph/: commands.rs  rendering.rs  stable_id.rs  writer.rs
src/state/stroke_collection/: commands.rs  writer.rs
src/tess/: rayon.rs
src/text/: renderer.rs
src/ui/: color_palette.rs  requests.rs
test-data/: .tode.png-autosave.kra  empty.fzp  grad.png~  owo.png~
