[package]
name = "fuzzpaint-vk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.73"
bitvec = "1.0.1"
bytemuck = "1.13.1"
cgmath = "0.18.0"
dhat = { version = "0.3.2", optional = true }
dirs = "5.0.1"
egui = { version = "0.22.0", features = ["bytemuck"] }
egui-winit = "0.22.0"
env_logger = "0.10.0"
hashbrown = "0.14.0"
human_bytes = "0.4.3"
image = "0.24.6"
log = "0.4.18"
parking_lot = "0.12.1"
rayon = "1.7.0"
rfd = "0.11.4"
ron = "0.8.1"
serde = { version = "1.0.188", features = ["derive", "rc"] }
smallvec = { version = "1.10.0", features = ["serde"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = [
    "sync",
    "rt",
    "macros",
    "parking_lot",
] }
try-block = "0.1.0"
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
uuid = { version = "1.4.0", features = ["v4"] }
# Use my vulkano 0.33.0 fork, which backports a SPIRV reflect fix allowing for dualSrcBlend.
vulkano = { version = "0.33.0", git = "https://github.com/Fuzzyzilla/vulkano.git", branch = "dual-src-fix" }
vulkano-shaders = { version = "0.33.0", git = "https://github.com/Fuzzyzilla/vulkano.git", branch = "dual-src-fix" }
vulkano-win = { version = "0.33.0", git = "https://github.com/Fuzzyzilla/vulkano.git", branch = "dual-src-fix" }
winit = { version = "0.28.6", features = ["serde"] }

[profile.profiling]
inherits = "release"
debug = true

[features]
dhat_heap = ["dhat"]
