[package]
name = "fuzzpaint-vk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.6", default-features = false, features = ["std"] }
anyhow = "1.0.71"
async-trait = "0.1.73"
az = "1.2.1"
bitflags = "2.4.1"
bitvec = { version = "1.0.1", default-features = false, features = [
    "alloc",
    "std",
] }
bytemuck = "1.13.1"
cgmath = "0.18.0"
defer = "0.1.0"
dhat = { version = "0.3.2", optional = true }
dirs = "5.0.1"
egui = { version = "0.23.0", features = ["bytemuck"] }
egui-winit = "0.23.0"
either = "1.9.0"
env_logger = "0.10.0"
hashbrown = "0.14.0"
human_bytes = "0.4.3"
id_tree = "1.8.0"
image = "0.24.6"
log = "0.4.18"
parking_lot = "0.12.1"
raw-window-handle = "0.5.0"
rayon = "1.7.0"
rfd = "0.11.4"
ron = "0.8.1"
serde = { version = "1.0.188", features = ["derive", "rc"] }
simple-logging = "2.0.2"
slab_tree = "0.3.2"
smallvec = { version = "1.10.0", features = ["serde"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = [
    "sync",
    "rt",
    "macros",
    "parking_lot",
] }
try-block = "0.1.0"
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
uuid = { version = "1.4.0", features = ["v4"] }
vulkano = { version = "0.34.1" }
vulkano-shaders = { version = "0.34.0" }
winit = { version = "0.28.7", default-features = false, features = [
    "x11",
    "serde",
] }

[profile.profiling]
inherits = "release"
debug = true

[features]
dhat_heap = ["dhat"]
